--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -28,6 +28,9 @@ header{
 label{
     font-size: .9em;
 }
+.search__form{
+    max-height: 3rem;
+}
 .search__btn{
     border: double #D90868;
     border-radius: 25%;
