--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -103,6 +103,8 @@ main{
 }
 .detail__img{
     width: 100%;
+    border-radius: 10%;
+    box-shadow: 0px 0px 3px 3px black;
 }
 .details__close{
     width: 4rem;
